Agregue iconos destino

--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
                 <p>Mira nuestros destinos favoritos alrededor del mundo</p>
             </div>
 
+            <div class="destinosIcons">
+                <span class="material-icons">
+                    airplanemode_active
+                    </span>
+                    <span class="material-icons">
+                        directions_boat
+                        </span>
+                    <span class="material-icons">
+                        directions_bus
+                        </span>
+
+            </div>
+
             <div class="containerDestinos">
 
                 <div class="item mexico"> 
